# gflow

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  README.md  README_CN.md  RELEASE_NOTES.md  SECURITY.md  index.html  install.sh  introduction.html  justfile  package.json  print.html  pyproject.toml  searchindex.js  toc.html  toc.js  vercel.json
.github/: FUNDING.yml  pull_request_template.md  renovate.json5
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: benchmark-regression.yml  cd.yml  ci.yml  deploy.yml  nightly.yml  pages.yml  pypi.yml  release.yml
benches/: filtering_bench.rs  scheduler_bench.rs
completions/: README.md  gflow-dynamic.bash  gflow-dynamic.fish  gflow-dynamic.zsh  install.sh
crates/common/: Cargo.toml
crates/common/src/: arg.rs  config.rs  jobs.rs  lib.rs
crates/slurmlet/: Cargo.toml
crates/slurmlet/src/: main.rs
crates/slurmlet/src/commands/: start.rs
crates/slurmletd/: Cargo.toml
crates/slurmletd/src/: lib.rs  main.rs  slurm.rs
crates/slurmone/: Cargo.toml
crates/slurmone/src/: commands.rs  main.rs
crates/slurmone/src/commands/: start.rs
crates/slurmoned/: Cargo.toml
crates/slurmoned/src/: lib.rs  main.rs  slurm.rs
docs/: README.md  book.toml
docs/.vitepress/: config.ts
docs/.vitepress/theme/: index.ts  style.css
docs/.vitepress/theme/components/: LandingPage.vue
docs/src/: SUMMARY.md  index.md  introduction.md  test-cmdrun.md
docs/src/ai-integration/: mcp-and-skills.md
docs/src/getting-started/: installation.md  quick-start.md  shell-completion.md
docs/src/reference/: gbatch-reference.md  gcancel-reference.md  gctl-reference.md  gflowd-reference.md  ginfo-reference.md  gjob-reference.md  gqueue-reference.md  gstats-reference.md  job-state-reasons.md  quick-reference.md
docs/src/user-guide/: benchmark-regression.md  configuration.md  gpu-management.md  job-dependencies.md  job-lifecycle.md  job-submission.md  multi-user.md  notifications.md  time-limits.md  tips.md
docs/src/zh-CN/: index.md
docs/src/zh-CN/ai-integration/: mcp-and-skills.md
docs/src/zh-CN/getting-started/: installation.md  quick-start.md  shell-completion.md
docs/src/zh-CN/reference/: gbatch-reference.md  gcancel-reference.md  gctl-reference.md  gflowd-reference.md  gjob-reference.md  gqueue-reference.md  gstats-reference.md  quick-reference.md
docs/src/zh-CN/user-guide/: benchmark-regression.md  configuration.md  gpu-management.md  job-dependencies.md  job-lifecycle.md  job-submission.md  multi-user.md  notifications.md  time-limits.md  tips.md
examples/mcp/: README.md  claude-desktop.json
getting-started/: installation.html  quick-start.html
gflow/: Cargo.toml
gflow-core/: Cargo.toml  build.rs
gflow-core/src/: executor.rs  lib.rs
gflow/src/: cli.rs  client.rs  commands.rs  main.rs
gflow/src/commands/: add.rs  completions.rs  start.rs
gflowd/: Cargo.toml
gflowd/src/: cli.rs  config.rs  job.rs  main.rs  scheduler.rs  server.rs
reference/: gbatch-reference.html  gcancel-reference.html  ginfo-reference.html  gqueue-reference.html  quick-reference.html
scripts/: README.md  benchmark_regression.py  demo_job.sh  demo_script_real.sh  generate_template.py  pages.sh
shared/: Cargo.toml
shared/src/: lib.rs
skills/gflow-ops/: SKILL.md
skills/gflow-ops/agents/: openai.yaml
slurmone/: commands.rs  common.rs  lib.rs  main.rs  slurm.rs  slurmone.rs  slurmoned.rs
slurmone/commands/: init.rs  restart.rs  start.rs  stop.rs
slurmone/common/: arg.rs  config.rs  jobs.rs  utils.rs
src/: build_info.rs  cli.rs  client.rs  commands.rs  config.rs  help.rs  job.rs  lib.rs  main.rs  metrics.rs  paths.rs  platform.rs  scheduler.rs  tls.rs  tmux.rs  tree.rs  utils.rs
src/bin_helpers/: multicall_wrapper.rs
src/commands/: add.rs  completions.rs  start.rs  stop.rs
src/core/: conflict.rs  db.rs  db_writer.rs  executor.rs  gpu.rs  gpu_allocation.rs  info.rs  job.rs  macros.rs  migrations.rs  mod.rs  reservation.rs  scheduler.rs
src/core/job/: model.rs  parameters.rs  state.rs
src/core/scheduler/: access.rs  builder.rs  persistence.rs  reservations.rs  scheduling.rs  transitions.rs
src/multicall/: completion.rs  mod.rs
src/multicall/gbatch/: cli.rs  commands.rs  mod.rs
src/multicall/gbatch/commands/: add.rs  new.rs
src/multicall/gcancel/: cli.rs  commands.rs  mod.rs
src/multicall/gctl/: cli.rs  mod.rs
src/multicall/gctl/commands/: gpu_process.rs  mod.rs  reserve_list.rs  set_group_max_concurrency.rs  show_gpus.rs
src/multicall/gflowd/: cli.rs  commands.rs  emails.rs  events.rs  executor.rs  mod.rs  scheduler_runtime.rs  server.rs  webhooks.rs
src/multicall/gflowd/commands/: init.rs  reload.rs  status.rs  up.rs
src/multicall/gflowd/scheduler_runtime/: event_loop.rs  gpu.rs  jobs.rs  monitors.rs  persistence.rs  retry.rs  tests.rs
src/multicall/gflowd/server/: state.rs  web_ui.rs
src/multicall/gflowd/server/handlers/: debug.rs  jobs.rs  metrics.rs  mod.rs  reservations.rs  stats.rs
src/multicall/ginfo/: cli.rs  mod.rs
src/multicall/ginfo/commands/: info.rs
src/multicall/gjob/: cli.rs  commands.rs  mod.rs  utils.rs
src/multicall/gjob/commands/: attach.rs  close_sessions.rs  log.rs  redo.rs  show.rs  update.rs
src/multicall/gqueue/: cli.rs  commands.rs  mod.rs
src/multicall/gqueue/commands/: list.rs
src/multicall/gstats/: cli.rs  mod.rs
src/multicall/gstats/commands/: stats.rs
src/multicall/mcp/: cli.rs  mod.rs  server.rs
src/multicall/mcp/server/: helpers.rs  list_jobs.rs  log.rs  queue_pressure.rs  schemas.rs  submit.rs  tests.rs  triage.rs  update.rs
src/utils/: parameter_sweep.rs  parsers.rs
tests/: cancel_during_execution_test.rs  daemon_e2e_test.rs  gpu_check.sh  integration_test.rs  simple_failure.sh  simple_success.sh  test.py
user-guide/: configuration.html  gpu-management.html  job-dependencies.html  job-submission.html  time-limits.html
web/: eslint.config.js  package.json  vite.config.ts
web/src/: App.tsx  api.ts  index.css
(+3 files in other folders)
