[package]
name = "gflow"
version = "0.2.8"
edition = "2021"
authors = ["PuQing <me@puqing.work>"]
repository = "https://github.com/AndPuQing/gflow.git"
license = "MIT"
description = "A lightweight, single-node job scheduler written in Rust."
keywords = ["slurm", "scheduler", "job", "rust"]
categories = ["command-line-interface"]
readme = "README.md"

[lib]
path = "src/lib.rs"

[[bin]]
name = "gflowd"
path = "src/bin/gflowd/main.rs"

[[bin]]
name = "gflow"
path = "src/bin/gflow/main.rs"

[dependencies]
tmux_interface = { version = "0.3.2" }
tokio = { version = "1.43.0", default-features = false, features = [
    "rt-multi-thread",
] }
clap = { version = "4.5.28", features = ["cargo", "derive"] }
clap-verbosity-flag = { version = "3.0.2", features = [
    "log",
], default-features = false }
clap_complete = "4.5.44"
env_logger = "0.11.6"
log = "0.4.25"
reqwest = { version = "0.12.12", features = ["json", "rustls-tls"], default-features = false }
axum = { version = "0.7.5", features = [
    "http1",
    "json",
    "macros",
    "tokio",
], default-features = false }
config = { version = "0.15.7", features = ["toml"], default-features = false }
dirs = "6.0.0"
rand = { version = "0.9.0", default-features = false, features = [
    "thread_rng",
] }
serde = { version = "1.0.217", default-features = false, features = [
    "derive",
    "serde_derive",
] }
shellexpand = { version = "3.1.0", features = [
    "tilde",
    "base-0",
], default-features = false }
anyhow = "1.0.95"
color-eyre = "0.6.3"
ratatui = { version = "0.29.0", features = ["macros"] }
crossterm = "0.28.1"
strum = { version = "0.27.0", features = ["derive"] }
nvml-wrapper = "0.11.0"
serde_json = "1.0"
uuid = { version = "1.10.0", features = ["v4", "fast-rng"] }
[build-dependencies]
anyhow = "1.0.95"
vergen-gix = { version = "1.0.6", features = ["build", "cargo"] }

[dev-dependencies]
mockall = "0.13.1"
tempfile = "3.16.0"
nvml-wrapper = "0.11.0"
tower = "0.4"
hyper = { version = "0.14", features = ["full"] }

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
