[package]
name = "gflow"
version = "0.3.14"
edition = "2021"
authors = ["PuQing <me@puqing.work>"]
repository = "https://github.com/AndPuQing/gflow.git"
license = "MIT"
description = "A lightweight, single-node job scheduler written in Rust."
keywords = ["slurm", "scheduler", "job", "rust"]
categories = ["command-line-interface"]
readme = "README.md"

[lib]
path = "src/lib.rs"

[[bin]]
name = "gflowd"
path = "src/bin/gflowd/main.rs"

[[bin]]
name = "gbatch"
path = "src/bin/gbatch/main.rs"

[[bin]]
name = "gqueue"
path = "src/bin/gqueue/main.rs"


[[bin]]
name = "ginfo"
path = "src/bin/ginfo/main.rs"

[[bin]]
name = "gcancel"
path = "src/bin/gcancel/main.rs"

[[bin]]
name = "gjob"
path = "src/bin/gjob/main.rs"


[dependencies]
tmux_interface = { version = "0.3.2" }
tokio = { version = "1.43.0", default-features = false, features = [
    "rt-multi-thread",
    "fs",
    "macros",
    "sync",
] }
clap = { version = "4.5.28", features = ["cargo", "derive"] }
clap-verbosity-flag = { version = "3.0.2", features = [
    "log",
], default-features = false }
clap_complete = "4.5.44"
env_logger = "0.11.6"
log = "0.4.25"
reqwest = { version = "0.12.12", features = [
    "json",
    "rustls-tls",
], default-features = false }
axum = { version = "0.7.5", features = [
    "http1",
    "json",
    "macros",
    "tokio",
    "query",
], default-features = false }
config = { version = "0.15.7", features = ["toml"], default-features = false }
dirs = "6.0.0"
serde = { version = "1.0.217", default-features = false, features = ["derive"] }
anyhow = "1.0.95"
strum = { version = "0.27.0", features = ["derive"] }
nvml-wrapper = "0.11.0"
serde_json = "1.0"
uuid = { version = "1.10.0", features = ["v4", "fast-rng"] }
names = { version = "0.14.0", default-features = false }
range-parser = "0.1.2"
tabled = { version = "0.20.0", features = ["ansi"] }
owo-colors = "4.1.0"

[build-dependencies]
anyhow = "1.0.95"
vergen-gix = { version = "1.0.6", features = ["build", "cargo"] }

[dev-dependencies]
mockall = "0.13.1"
tempfile = "3.16.0"
nvml-wrapper = "0.11.0"
tower = "0.4"
hyper = { version = "0.14", features = ["server", "http1", "tcp"] }

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
