[package]
name = "gflow"
version = "0.4.7"
edition = "2021"
authors = ["PuQing <me@puqing.work>"]
repository = "https://github.com/AndPuQing/gflow.git"
documentation = "https://gflow.puqing.work/"
license = "MIT"
description = "A lightweight, single-node job scheduler written in Rust."
keywords = ["slurm", "scheduler", "job", "rust"]
categories = ["command-line-interface"]
readme = "README.md"

[lib]
path = "src/lib.rs"

[[bin]]
name = "gflowd"
path = "src/bin/gflowd/main.rs"

[[bin]]
name = "gbatch"
path = "src/bin/gbatch/main.rs"

[[bin]]
name = "gqueue"
path = "src/bin/gqueue/main.rs"


[[bin]]
name = "ginfo"
path = "src/bin/ginfo/main.rs"

[[bin]]
name = "gcancel"
path = "src/bin/gcancel/main.rs"

[[bin]]
name = "gjob"
path = "src/bin/gjob/main.rs"

[[bin]]
name = "gctl"
path = "src/bin/gctl/main.rs"


[dependencies]
tmux_interface = { version = "0.3.2" }
tokio = { version = "1.43.0", default-features = false, features = [
    "rt-multi-thread",
    "fs",
    "macros",
    "sync",
    "signal",
    "io-util"
] }
clap = { version = "4.5.28", features = ["cargo", "derive"] }
clap_complete = "4.5.44"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt", "ansi", "json"] }
prometheus = { version = "0.13.4", optional = true }
lazy_static = { version = "1.4.0", optional = true }
reqwest = { version = "0.13.0", features = [
    "json",
    "query"
], default-features = false }
axum = { version = "0.8.0", features = [
    "http1",
    "json",
    "macros",
    "tokio",
    "query",
], default-features = false }
config = { version = "0.15.7", features = ["toml"], default-features = false }
dirs = "6.0.0"
serde = { version = "1.0.217", default-features = false, features = ["derive"] }
anyhow = "1.0.95"
strum = { version = "0.27.0", features = ["derive"] }
nvml-wrapper = "0.11.0"
serde_json = "1.0"
rusqlite = { version = "0.38", features = ["bundled", "serde_json"] }
r2d2 = "0.8"
r2d2_sqlite = "0.32"
uuid = { version = "1.10.0", features = ["v4", "fast-rng"] }
range-parser = "0.1.2"
tabled = { version = "0.20.0", features = ["ansi"] }
owo-colors = "4.1.0"
shell-escape = "0.1.5"
regex = "1"
csv = "1.3"
socket2 = "0.6"
libc = "0.2"
clap-verbosity-flag = { version = "3.0.4", default-features = false, features = ["tracing"] }
chrono = { version = "0.4.42", features = ["clock"] }

[features]
default = []
metrics = ["prometheus", "lazy_static"]

[build-dependencies]
anyhow = "1.0.95"
vergen-gix = { version = "1.0.6", features = ["build", "cargo"] }

[dev-dependencies]
mockall = "0.14.0"
tempfile = "3.16.0"
nvml-wrapper = "0.11.0"
tower = "0.5"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
