[package]
name = "gflow-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.217", default-features = false, features = ["derive", "serde_derive"] }
strum = { version = "0.27.0", features = ["derive"] }
rand = { version = "0.9.0", default-features = false, features = ["thread_rng"] }
dirs = "6.0.0"
clap = { version = "4.5.28", features = ["cargo"] }
nvml-wrapper = "0.11.0"
anyhow = "1.0.95"

[build-dependencies]
anyhow = "1.0.95"
vergen-gix = { version = "1.0.6", features = ["build", "cargo"] }
