[package]
name = "gflow"
version = "0.1.0"
edition = "2021"
authors = ["PuQing <me@puqing.work>"]
license = "MIT"
description = "A lightweight, single-node job scheduler written in Rust."
keywords = ["slurm", "scheduler", "job", "rust"]

[dependencies]
tokio = { version = "1.43.0", features = ["full"] }
clap = { version = "4.5.28", features = ["cargo", "derive"] }
clap-verbosity-flag = { version = "3.0.2", features = ["log"] }
clap_complete = "4.5.44"
env_logger = "0.11.6"
log = "0.4.25"
reqwest = { version = "0.12.12", features = ["json"] }
shared = { path = "../shared" }

[build-dependencies]
anyhow = "1.0.95"
vergen-gix = { version = "1.0.6", features = ["build", "cargo"] }

[dev-dependencies]
mockall = "0.13.1"
