[package]
name = "gflowd"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.1", features = ["macros"] }
clap = { version = "4.5.28", features = ["cargo", "derive"] }
clap-verbosity-flag = { version = "3.0.2", features = ["log"] }
shared = { path = "../shared" }
tmux_interface = "0.3.2"
tokio = { version = "1.43.0", features = ["full"] }
env_logger = "0.11.6"
log = "0.4.25"
config = { version = "0.15.7", features = ["toml"] }


[build-dependencies]
anyhow = "1.0.95"
vergen-gix = { version = "1.0.6", features = ["build", "cargo"] }

[dev-dependencies]
tempfile = "3.16.0"
