[package]
name = "common"
version = "0.1.0"
edition = "2021"
authors = ["PuQing <me@puqing.work>"]

[lib]
name = "common"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.5.23", features = ["cargo", "derive"] }
dirs = "5.0.1"
num_cpus = "1.16.0"
nvml-wrapper = "0.10.0"
rmp-serde = "1.3.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
shellexpand = "3.1.0"
tokio = "1.42.0"
toml = "0.8.19"
tracing = "0.1.41"

[build-dependencies]
anyhow = "1.0.86"
vergen-gix = { version = "1.0.0", features = ["build", "cargo"] }

[profile.release]
codegen-units = 1
strip = true
lto = true
opt-level = "z"
