[package]
name = "slurmone"
version = "0.1.0"
edition = "2021"
authors = ["PuQing <me@puqing.work>"]

[[bin]]
name = "slurmone"
path = "src/main.rs"

[dependencies]
common = { path = "../common" }
log = "0.4.22"
rmp-serde = "1.3.0"
serde = "1.0.215"
serde_json = "1.0.133"
slurmoned = { path = "../slurmoned" }
tokio = { version = "1.42.0", features = ["full"] }
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
